deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-opencensus-sample
spec:
  type: NodePort
  ports:
    - name: tcp
      port: 3000
      targetPort: 3000
      nodePort: 30000
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: grpc-opencensus-sample
