deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: app.minikube
      http:
        paths:
          - path: /app(/|$)(.*)
            backend:
              serviceName: grpc-opencensus-sample
              servicePort: 8080
